updated the featured items

--- a/MyMario/index.html
+++ b/MyMario/index.html
@@ -56,25 +56,25 @@
         <div class="row">
             <div class="col-sm-4">
                 <a href="#" class="thumbnail">
-                    <img src="images/char-mario-star.png" alt="">
+                    <img src="images/featured-mariokart8.jpg" alt="">
                 </a>
-                <h3>Star</h3>
+                <h3>Mario Kart</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, aliquam? Consequuntur sint nesciunt, veritatis, dolor eum possimus totam impedit nulla ad aliquid corporis praesentium nisi ullam earum pariatur qui ea.</p>
                 <a href="#theme1" data-toggle="modal" class="btn btn-danger">View</a>
             </div>
             <div class="col-sm-4">
                     <a href="#" class="thumbnail">
-                        <img src="images/char-mario-shell.png" alt="">
+                        <img src="images/featured-mario-odyssey.jpg" alt="">
                      </a>
-                    <h3>Shell</h3>
+                    <h3>Mario Odyssey</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, aliquam? Consequuntur sint nesciunt, veritatis, dolor eum possimus totam impedit nulla ad aliquid corporis praesentium nisi ullam earum pariatur qui ea.</p>
                     <a href="#theme2" data-toggle="modal" class="btn btn-danger">View</a>
             </div>
             <div class="col-sm-4">
                     <a href="#" class="thumbnail">
-                        <img src="images/char-mario-run.png" alt="">
+                        <img src="images/featured-mario-party.jpg" alt="">
                     </a>
-                    <h3>Run</h3>
+                    <h3>Mario Party</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, aliquam? Consequuntur sint nesciunt, veritatis, dolor eum possimus totam impedit nulla ad aliquid corporis praesentium nisi ullam earum pariatur qui ea.</p>
                     <a href="#theme3" data-toggle="modal" class="btn btn-danger">View</a>
             </div>
@@ -113,7 +113,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4>Theme 1</h4>
+                    <h4>Mario Kart</h4>
                 </div>
                 <div class="modal-body">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum commodi fugit repudiandae impedit nam. Distinctio quae nemo, similique minima sint velit dicta quod deserunt iure optio soluta expedita modi praesentium.</p>
@@ -129,7 +129,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4>Theme 2</h4>
+                        <h4>Mario Odyssey</h4>
                     </div>
                     <div class="modal-body">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum commodi fugit repudiandae impedit nam. Distinctio quae nemo, similique minima sint velit dicta quod deserunt iure optio soluta expedita modi praesentium.</p>
@@ -145,7 +145,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4>Theme 3</h4>
+                        <h4>Mario Party</h4>
                     </div>
                     <div class="modal-body">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum commodi fugit repudiandae impedit nam. Distinctio quae nemo, similique minima sint velit dicta quod deserunt iure optio soluta expedita modi praesentium.</p>
