history page created

--- a/MyMario/index.html
+++ b/MyMario/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HOME</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/css/style.css">
+	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="myStyles/style.css">
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -27,7 +27,7 @@
                     <li class="active"><a href="#">Home</a></li>       
                     <li><a href="#about">About</a></li>   
                     <li><a href="character.html">Characters</a></li>
-                    <li><a href="#">History</a></li>           
+                    <li><a href="history.html">History</a></li>           
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -42,7 +42,7 @@
                     <img class="img-responsive" src="images/char-mario-star.png">
                 </div>
                 <div class="col-md-4 col-sm-6">
-                    <h1>Hello I'm Mario</h1>
+                    <h1><q>It's-a me, Mario!</q></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis </p>
                     <a href="#" class="btn btn-primary">Hello</a>
                     <a href="#" class="btn btn-success">World</a>
@@ -224,7 +224,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <!-- include all compiled plugins -->
-<script src="js/bootstrap.min.js"></script>
+<script src="libs/js/bootstrap.min.js"></script>
 
 
 
