--- a/MyMario/history.html
+++ b/MyMario/history.html
@@ -27,8 +27,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li ><a href="index.html">Home</a></li>       
                     <li><a href="#about">About</a></li>  
-                    <li><a href="character.html">Characters</a></li>
-                    <li class="active"><a href="history.html">History</a></li>  
+                    <li><a href="character.html#content-page">Characters</a></li>
+                    <li class="active"><a href="history.html#content-page">History</a></li>  
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
                 </ul>
             </div><!--.nav-collapse -->
@@ -36,7 +36,7 @@
     </nav>
 
 <!-- paga content -->
-    <section class="container">
+    <section class="container" id="content-page">
         <ol class="breadcrumb">
           <li><a href="index.html">Home</a></li>
           <li class="active">History</li>
