--- a/MyMario/character.html
+++ b/MyMario/character.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="myStyle/style.css">
+   
     <link rel="stylesheet" type="text/css" href="myStyles/character.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
                 <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li ><a href="index.html">Home</a></li>       
-                    <li><a href="#about">About</a></li>  
+                    <li ><a href="gallery.html">Gallery</a></li>  
                     <li class="active"><a href="character.html">Characters</a></li>
                     <li><a href="history.html#content-page">History</a></li>  
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
@@ -148,9 +148,6 @@
         
     </section>
     
-
-
-
 
 
 
