--- a/MyMario/history.html
+++ b/MyMario/history.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <link rel="stylesheet" href="myStyles/style.css">
   <link rel="stylesheet" href="myStyles/history.css">
 </head>
 <body>
@@ -26,7 +25,7 @@
                 <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li ><a href="index.html">Home</a></li>       
-                    <li><a href="#about">About</a></li>  
+                    <li ><a href="gallery.html">Gallery</a></li> 
                     <li><a href="character.html#content-page">Characters</a></li>
                     <li class="active"><a href="history.html#content-page">History</a></li>  
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
@@ -281,8 +280,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <div class="navbar-text">
-                        <p>© Jeffrey</p>
+                    <div class=" navbar-text">
+                        <p >© Jeffrey</p>
                         <p>Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. © 2017 Nintendo.</p>
                     </div>
                 </div>
