--- a/MyMario/history.html
+++ b/MyMario/history.html
@@ -27,7 +27,7 @@
                     <li ><a href="index.html">Home</a></li>       
                     <li ><a href="gallery.html">Gallery</a></li> 
                     <li><a href="character.html#content-page">Characters</a></li>
-                    <li class="active"><a href="history.html#content-page">History</a></li>  
+                    <li class="active"><a href="history.html">History</a></li>  
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
                 </ul>
             </div><!--.nav-collapse -->
@@ -276,13 +276,13 @@
 
 
  <!-- footer -->
-    <footer class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+ <footer class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <div class=" navbar-text">
-                        <p >© Jeffrey</p>
-                        <p>Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. © 2017 Nintendo.</p>
+                    <div class="navbar-text">
+                        <p>&copy; Jeffrey</p>
+                        <p>Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. &copy; 2017 Nintendo.</p>
                     </div>
                 </div>
             </div> 
