--- a/MyMario/index.html
+++ b/MyMario/index.html
@@ -87,7 +87,7 @@
 
 
 <!-- footer -->
-    <footer class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <footer class="navbar navbar-inverse " role="navigation">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
