--- a/MyMario/history.html
+++ b/MyMario/history.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="myStyles/generic.css">
   <link rel="stylesheet" href="myStyles/history.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li ><a href="index.html">Home</a></li>       
+                    <li ><a href="home.html">Home</a></li>       
                     <li ><a href="gallery.html">Gallery</a></li> 
                     <li><a href="character.html#content-page">Characters</a></li>
                     <li class="active"><a href="history.html">History</a></li>  
@@ -37,7 +38,7 @@
 <!-- paga content -->
     <section class="container" id="content-page">
         <ol class="breadcrumb">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li class="active">History</li>
         </ol>
     </section>
@@ -356,29 +357,6 @@
 </div>
 
 
-
- <!-- footer -->
-    <footer class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="navbar-text">
-                        <p>&copy; Jeffrey</p>
-                        <p>Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. &copy; 2017 Nintendo.</p>
-                    </div>
-                </div>
-            </div> 
-             <div class="row">
-                <div class="col-md-2 col-md-offset-5">
-                     <div class="navbar-text">
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                        <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                        <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
-                    </div>
-                </div>
-             </div>   
-        </div>
-    </footer>
 
 
 
