modified nav bar

--- a/MyMario/character.html
+++ b/MyMario/character.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CHARACTERS</title>
+    <!-- bootstrap -->
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
+
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+    <!-- custom styles -->
     <link rel="stylesheet" href="myStyles/generic.css">
-   
     <link rel="stylesheet" type="text/css" href="myStyles/character.css">
 </head>
 <body>
@@ -28,7 +32,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li ><a href="home.html">Home</a></li>       
                     <li ><a href="gallery.html">Gallery</a></li>  
-                    <li class="active"><a href="character.html">CHARACTERS</a></li>
+                    <li class="active"><a href="character.html">Characters</a></li>
                     <li><a href="history.html#content-page">History</a></li>  
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
                 </ul>
@@ -38,10 +42,7 @@
 
 <!-- paga content -->
     <section class="container">
-        <ol class="breadcrumb" id="content-page">
-          <li><a href="home.html">Home</a></li>
-          <li class="active">Characters</li>
-        </ol>
+        
 
         <h1>CHARACTERS</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
