--- a/MyMario/gallery.html
+++ b/MyMario/gallery.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GALLERY</title>
+    <!-- bootstrap -->
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
+
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+    <!-- custom styles -->
     <link rel="stylesheet" href="myStyles/generic.css">
   <link rel="stylesheet" href="myStyles/gallery.css">
 </head>
@@ -37,10 +42,7 @@
 
 
     <section class="container" >
-            <ol class="breadcrumb" id="content-page">
-                <li><a href="home.html">Home</a></li>
-                <li class="active">GALLERY</li>
-            </ol>
+           
         <header>
         <h1>MARIO GALLERY</h1>
          </header>
