--- a/MyMario/home.html
+++ b/MyMario/home.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HOME</title>
+
+    <!-- bootstrap -->
     <link rel="stylesheet" type="text/css" href="libs/css/style.css">
 	<link rel="stylesheet" type="text/css" href="libs/css/bootstrap.min.css">
+
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+    <!-- custom style -->
     <link rel="stylesheet" href="myStyles/generic.css">
   <link rel="stylesheet" href="myStyles/style.css">
 </head>
@@ -21,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">MARIO</a>
+                <a class="navbar-brand" href="index.html"><img class="img-responsive" src="images/logo-mario.png"></a>
                 </div>
                 <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -38,7 +44,8 @@
     <!-- jumbotron -->
     <div class="container">
         <div class="jumbotron text-center">
-            <div class="row">
+            <div class="back">
+                <div class="row">
                 <div class="col-md-8 col-sm-6">
                     <img class="img-responsive" src="images/home/char-mario-star.png">
                 </div>
@@ -49,7 +56,7 @@
                     <a href="#" class="btn btn-success">World</a>
                 </div>
             </div>
-            
+            </div>
         </div>
         <!-- page content  -->
         <div class="row" id="page-content">
