--- a/MyMario/home.html
+++ b/MyMario/home.html
@@ -37,7 +37,7 @@
                     <li><a href="history.html">History</a></li>           
                     <li><a href="#contact" data-toggle="modal">Contact </a></li>
                 </ul>
-            </div><!--/.nav-collapse -->
+            </div><!--.nav-collapse -->
         </div>
     </nav>
 
@@ -52,8 +52,8 @@
                 <div class="col-md-4 col-sm-6">
                     <h1><q>It's-a me, Mario!</q></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis </p>
-                    <a href="#" class="btn btn-primary">Hello</a>
-                    <a href="#" class="btn btn-success">World</a>
+                    <a href="#btn-1" data-toggle="modal" class="btn btn-primary">Hello</a>
+                    <a href="#btn-2" data-toggle="modal" class="btn btn-success">World</a>
                 </div>
             </div>
             </div>
@@ -94,14 +94,15 @@
 
 
 
-<!-- footer -->
-    <footer class="navbar navbar-inverse " role="navigation">
+ <!-- footer -->
+    <footer class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="col-md-9 col-md-offset-2">
                     <div class="navbar-text">
-                        <p>&copy; Jeffrey</p>
-                        <p>Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. &copy; 2017 Nintendo.</p>
+                        <p class="text-center">&copy; Jeffrey</p>
+                        <p class="text-center">Game trademarks and copyrights are properties of their respective owners. Nintendo properties are trademarks of Nintendo. &copy; 2017 Nintendo.</p>
+                        <p class="text-center">This is site is not affiliated with Nintendo</p>
                     </div>
                 </div>
             </div> 
@@ -110,7 +111,7 @@
                      <div class="navbar-text">
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
                         <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                        <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
+                        <a href="#"><i class="fa fa-gitlab fa-2x"></i></a>
                     </div>
                 </div>
              </div>   
@@ -118,7 +119,39 @@
     </footer>
 
 
+<!-- jumbotrom modal -->
 
+    <div class="modal fade" id="btn-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Content to follow</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Naubos oras ko sorry</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="" class="btn btn-primary" data-dismiss="modal">Close</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="btn-2" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Content to follow</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Naubos oras ko sorry</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="" class="btn btn-primary" data-dismiss="modal">Close</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     
 <!-- modal -->
